# QuadDrone

./: CMakeLists.txt  test_build.sh
app/: CMakeLists.txt  prj.conf
app/boards/: nucleo_f302r8.overlay
app/include/app/: battery_monitor.h  flight_display.h  key_scan.h  rc_processor.h
app/src/: battery_monitor.c  flight_display.c  key_scan.c  main.c  rc_processor.c
drivers/adc_multi/: CMakeLists.txt  Kconfig  adc_multi.c  adc_multi.h
drivers/display/ssd1306_spi/: CMakeLists.txt  Kconfig  ssd1306_spi.c  ssd1306_spi.h
drivers/nrf24l01_ano/: nrf24l01_ano.c  nrf24l01_ano.h
drivers/protocol_ano/: protocol_ano.c  protocol_ano.h
drivers/uart_ano/: uart_ano.c  uart_ano.h
include/app/lib/: control.h  filter.h  math.h
lib/: CMakeLists.txt  Kconfig
lib/control/: CMakeLists.txt  Kconfig  pid.cpp
lib/filter/: CMakeLists.txt  Kconfig  filter.cpp
lib/math/: CMakeLists.txt  Kconfig  math_utils.cpp  math_utils.h  matrix3.cpp  matrix3.h  quaternion.cpp  quaternion.h  rotations.h  vector3.cpp  vector3.h
tests/: CMakeLists.txt  test_protocol_ano.c
